2017-10-20  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-847

	* src/m_telsem.cc, src/telsem.{h,cc}, src/methods.cc,
	src/CMakeLists.txt:

	Add reading routine telsem_atlasesReadAscii for TELSEM 2 SSMI atlas
	data.

	To actually use the data in ARTS further work is needed. Esp. the
	fortran routines equare and calc_cellnum (to determine the cellnum
	inside the atlas from a given lat/lon) from mod_mwatlas_M2.f90 and
	the actual emissivity extraction need to be implemented.

	* src/groups.cc: Add ArrayOfTelsemAtlas and TelsemAtlas group.

	* src/workspace.cc: Add telsem_atlases WSV.

	* src/xml_io_array_types.cc, src/xml_io_compound_types.cc,
	src/xml_io_instantiation.h, src/xml_io_types.h:

	Add read/write support for [ArrayOf]TelsemAtlas.

	* src/make_auto_md_h.cc, src/make_auto_workspace_h.cc:

	Include telsem.h.

2017-10-20  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-846

	* src/m_microphysics.cc (psdMgdMassXmedian): A slight renaming.
	Seems to work now. But only n0 and la allowed as dependent vars.

	(psdMgdMassXmean): New. As psdMgdMassXmedian but takes mean size
	as input instead of the median one.

	(psdMgdMass, psdMgdMassXmedian): Changed internal nomenclature,
	from implied to dependent parameter(s). Corrected error messages.

2017-10-19  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-845

	* src/m_microphysics.cc (psdMono, psdMonoMass): New WSMs, handling
	mono-dispersive PSD cases.

	* controlfiles/artscomponents/wfuns/TestWfunsHybCloudy.arts:
	Updated to removal of pnd_size_gridFromScatMeta.

	* src/m_microphysics.cc (psdMgdMass): Added checks that input
	argument to gamma is > 0.
	(psdMgdMassDmedian): More work, but not yet ready.

	(psdF07): Now using scat_species_a and scat_species_b.

	(ScatSpeciesSizeMassInfo): Introduced GIN do_only_x. Now also
	default values for x_fit_start (0) and x_fit_end (1e9).

	(pnd_size_gridFromScatMeta, MassSizeParamsFromScatMeta): Removed.
	Use ScatSpeciesSizeMassInfo instead.
